HTML base with navigation bar

--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/stylesheeet.css">
-    <title>Apex Animal Training</title>
+    <link rel="stylesheet" href="/css/stylesheet.css">
+    <title>Day 6</title>
 </head>
 <body>
+    <header class="border">
+        <h1>Header</h1>
+    </header>
+<div class="sticky">
+    <nav class="border">
+        <ul>
+            <li><a href="index.html"><button>Home</button></a></li>
+            <li><a href="about.html"><button>About</button></a></li>
+            <li><a href="schedule.html"><button>Schedule</button></a></li>
+            <li><a href="contact.html"><button>Contact</button></a></li>
+        </ul>
+    </nav>
+</div>
+    <aside class="border">
+        <h3>Aside</h3>
+    </aside>
+
+    <section class="border">
+        <h4>Section</h4>
+    </section>
+
+    <article class="border">
+        <h5>Article</h5>
+    </article>
     
+    <footer class="border">
+        <h6>Footer</h6>
+    </footer>
 </body>
 </html>
