--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="css/stylesheeet.css">
     <title>Apex Animal Training</title>
 </head>
 <body>
     <header class="border">
-        <h1>Header</h1>
+        <h1>Apex Animal Training</h1>
     </header>
 <div class="sticky">
     <nav class="border">
