--- a/contact.html
+++ b/contact.html
@@ -9,5 +9,11 @@
 </head>
 <body>
     <h1>Contact</h1>
+    <form>
+        <input placeholder="name" /><br>
+        <input placeholder="email" /><br>
+        <textarea placeholder="message…"></textarea><br>
+        <input type="submit">
+    </form>
 </body>
 </html>
