contact form styling

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <h1>Contact</h1>
+    <div class="contactInfo">
+        <h2>Teri McCullar</h2>
+        <a>Phone: (661) 205-1234</a><br>
+        <a>Email: <a href="mailto:placeholder@email.com"
+    target="_blank">tmccullar27@gmail.com</a><br>
+    </div>
+    <h3>Quick Message</h3>
     <form>
         <input placeholder="name" /><br>
         <input placeholder="email" /><br>
