--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/stylesheeet.css">
+    
     <title>Apex Animal Training</title>
 </head>
 <body>
@@ -35,6 +35,9 @@
     
     <footer class="border">
         <h6>Footer</h6>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem architecto hic inventore sit adipisci nulla magnam. Modi dolorem, non esse, dignissimos porro recusandae dolorum voluptas facilis aspernatur exercitationem quaerat. Culpa.</p><br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi accusamus perferendis iusto, laudantium assumenda eaque, architecto nesciunt nisi ipsam dolor dolorum non unde inventore et facere? Accusamus nulla ad repellat?</p><br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni expedita rem rerum ratione maiores, quam, blanditiis officiis sapiente necessitatibus est, fugit voluptatem. Reprehenderit unde animi ipsum aut excepturi? Ab, quod.</p>
     </footer>
 </body>
 </html>
