--- a/index.html
+++ b/index.html
@@ -22,19 +22,15 @@
     </nav>
 </div>
     <aside class="border">
-        <h3>Aside</h3>
+        <h3>Left Section</h3>
     </aside>
 
     <section class="border">
-        <h4>Section</h4>
+        <h4>Right Section</h4>
     </section>
-
-    <article class="border">
-        <h5>Article</h5>
-    </article>
     
     <footer class="border">
-        <h6>Footer</h6>
+        <h5>Footer</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem architecto hic inventore sit adipisci nulla magnam. Modi dolorem, non esse, dignissimos porro recusandae dolorum voluptas facilis aspernatur exercitationem quaerat. Culpa.</p><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi accusamus perferendis iusto, laudantium assumenda eaque, architecto nesciunt nisi ipsam dolor dolorum non unde inventore et facere? Accusamus nulla ad repellat?</p><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni expedita rem rerum ratione maiores, quam, blanditiis officiis sapiente necessitatibus est, fugit voluptatem. Reprehenderit unde animi ipsum aut excepturi? Ab, quod.</p>
