--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
     </nav>
 </div>
     <aside class="border">
-        <h3>Left Section</h3>
+        <h3>Right Section</h3>
     </aside>
 
     <section class="border">
-        <h4>Right Section</h4>
+        <h4>Left Section</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem architecto hic inventore sit adipisci nulla magnam. Modi dolorem, non esse, dignissimos porro recusandae dolorum voluptas facilis aspernatur exercitationem quaerat. Culpa.</p>
     </section>
     
     <footer class="border">
-        <h5>Footer</h5>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d104113.53864625619!2d-119.03658064246932!3d35.36686010936153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1635305051081!5m2!1sen!2sus" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem architecto hic inventore sit adipisci nulla magnam. Modi dolorem, non esse, dignissimos porro recusandae dolorum voluptas facilis aspernatur exercitationem quaerat. Culpa.</p><br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi accusamus perferendis iusto, laudantium assumenda eaque, architecto nesciunt nisi ipsam dolor dolorum non unde inventore et facere? Accusamus nulla ad repellat?</p><br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni expedita rem rerum ratione maiores, quam, blanditiis officiis sapiente necessitatibus est, fugit voluptatem. Reprehenderit unde animi ipsum aut excepturi? Ab, quod.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem architecto hic inventore sit adipisci nulla magnam. Modi dolorem, non esse, dignissimos porro recusandae dolorum voluptas facilis aspernatur exercitationem quaerat. Culpa.</p><br>
     </footer>
 </body>
 </html>
